# y2Graph

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/src/: example_images.md  example_join.md  example_simple.md  installation.md  readme.md  usage.md
y2graph/: __main__.py  utils.py
