
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "*"
]

[project]
name = "y2Graph"
version = "0.0.1"
authors = [
  { name="Gabriele Padovani", email="gabriele.padovani@unitn.it" },
]
description = "y2Graph (yaml to graph) is a simple Python tool to build W3C-PROV provenance graphs from workflow descriptions written in YAML. It uses the prov library to create entities, activities, and their relationships, and can export the results to PROV-JSON and a graph visualization (PNG)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "prov",
    "pydot", 
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/HPCI-Lab/y2Graph"
Issues = "https://github.com/HPCI-Lab/y2Graph/issues"
